--- a/customer/src/main/res/layout/transfer_main_screen.xml
+++ b/customer/src/main/res/layout/transfer_main_screen.xml
@@ -8,49 +8,16 @@
     android:background="@color/aspire_cream_background"
     tools:context=".TransferFragment">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/header_layout"
-        android:layout_width="0dp"
-        android:layout_height="?attr/actionBarSize"
-        android:background="@android:color/white"
-        android:elevation="4dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
-
-        <ImageView
-            android:id="@+id/header_logo"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:src="@drawable/ic_aspire_logo"
-            android:layout_marginStart="16dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" />
-
-        <TextView
-            android:id="@+id/header_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Aspire Bank"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            android:fontFamily="@font/adamina"
-            android:textColor="@color/aspire_dark_text"
-            android:layout_marginStart="8dp"
-            app:layout_constraintStart_toEndOf="@id/header_logo"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    <include layout="@layout/app_bar" />
 
     <ScrollView
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:padding="16dp"
-        app:layout_constraintTop_toBottomOf="@id/header_layout"
+        app:layout_constraintTop_toBottomOf="@id/appBar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/bottom_navigation_bar">
+        app:layout_constraintBottom_toTopOf="@id/nav_bar">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -224,74 +191,6 @@
         </LinearLayout>
     </ScrollView>
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/bottom_navigation_bar"
-        android:layout_width="0dp"
-        android:layout_height="64dp"
-        app:cardCornerRadius="24dp"
-        app:cardElevation="8dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginBottom="16dp"
-        app:cardBackgroundColor="@android:color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:gravity="center_vertical"
-            android:paddingStart="16dp"
-            android:paddingEnd="16dp">
-
-            <ImageView
-                android:id="@+id/nav_home"
-                android:layout_width="0dp"
-                android:layout_height="32dp"
-                android:layout_weight="1"
-                android:src="@drawable/ic_home"
-                android:tint="@color/aspire_dark_text"
-                tools:ignore="UseAppTint,Suspicious0dp" />
-
-            <ImageView
-                android:id="@+id/nav_notification"
-                android:layout_width="0dp"
-                android:layout_height="32dp"
-                android:layout_weight="1"
-                android:src="@drawable/ic_notifications"
-                android:tint="@color/aspire_dark_text"
-                tools:ignore="UseAppTint,Suspicious0dp" />
-
-            <ImageView
-                android:id="@+id/nav_apps"
-                android:layout_width="0dp"
-                android:layout_height="32dp"
-                android:layout_weight="1"
-                android:src="@drawable/ic_grid"
-                android:tint="@color/aspire_dark_text"
-                tools:ignore="UseAppTint,Suspicious0dp" />
-
-            <ImageView
-                android:id="@+id/nav_location"
-                android:layout_width="0dp"
-                android:layout_height="32dp"
-                android:layout_weight="1"
-                android:src="@drawable/ic_location"
-                android:tint="@color/aspire_dark_text"
-                tools:ignore="UseAppTint,Suspicious0dp" />
-
-            <ImageView
-                android:id="@+id/nav_person"
-                android:layout_width="0dp"
-                android:layout_height="32dp"
-                android:layout_weight="1"
-                android:src="@drawable/ic_person"
-                android:tint="@color/aspire_dark_text"
-                tools:ignore="UseAppTint,Suspicious0dp" />
-
-        </LinearLayout>
-    </androidx.cardview.widget.CardView>
+    <include layout="@layout/nav_bar" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
