--- a/customer/src/main/res/layout/transfer_success_screen.xml
+++ b/customer/src/main/res/layout/transfer_success_screen.xml
@@ -7,40 +7,7 @@
     android:background="@color/aspire_cream_background"
     tools:context=".TransferSuccessActivity">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/header_layout"
-        android:layout_width="0dp"
-        android:layout_height="?attr/actionBarSize"
-        android:background="@android:color/white"
-        android:elevation="4dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
-
-        <ImageView
-            android:id="@+id/header_logo"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:src="@drawable/ic_aspire_logo"
-            android:layout_marginStart="16dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" />
-
-        <TextView
-            android:id="@+id/header_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Aspire Bank"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            android:fontFamily="@font/adamina"
-            android:textColor="@color/aspire_dark_text"
-            android:layout_marginStart="8dp"
-            app:layout_constraintStart_toEndOf="@id/header_logo"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    <include layout="@layout/app_bar" />
 
     <androidx.cardview.widget.CardView
         android:layout_width="0dp"
