--- a/app/src/main/res/layout/home_customer_activity.xml
+++ b/app/src/main/res/layout/home_customer_activity.xml
@@ -3,7 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="#fff1d6">
+    android:background="#fff1d6"
+    android:id="@+id/home_customer"
+    >
 
     <include
         layout="@layout/app_bar"
@@ -24,7 +26,7 @@
         <androidx.cardview.widget.CardView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:cardCornerRadius="10dp"
+            app:cardCornerRadius="15dp"
             android:background="@color/white"
             android:layout_marginTop="30dp"
             android:layout_marginBottom="60dp"
@@ -54,6 +56,7 @@
                     >
 
                     <TextView
+                        android:id="@+id/name"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="NGUYEN VAN A"
@@ -67,6 +70,7 @@
                         >
 
                         <TextView
+                            android:id="@+id/balance"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="100.000.000 VND"
@@ -94,17 +98,16 @@
             <androidx.cardview.widget.CardView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:cardCornerRadius="20dp"
-
+                app:cardCornerRadius="36dp"
+                android:layout_marginVertical="5dp"
                 >
 
                 <ImageView
                     android:id="@+id/deposit"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:backgroundTintMode="screen"
                     android:src="@mipmap/ic_transfer"
-                    app:backgroundTint="#fddcbb" />
+                    />
 
 
             </androidx.cardview.widget.CardView>
@@ -118,15 +121,14 @@
             <androidx.cardview.widget.CardView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:cardCornerRadius="20dp">
+                app:cardCornerRadius="36dp">
 
                 <ImageView
                     android:id="@+id/transfer"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:backgroundTintMode="screen"
                     android:src="@mipmap/ic_transfer_outside"
-                    app:backgroundTint="#fddcbb" />
+                    />
 
 
             </androidx.cardview.widget.CardView>
@@ -140,15 +142,14 @@
             <androidx.cardview.widget.CardView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:cardCornerRadius="20dp">
+                app:cardCornerRadius="36dp">
 
                 <ImageView
                     android:id="@+id/utility"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:backgroundTintMode="screen"
                     android:src="@mipmap/ic_utility"
-                    app:backgroundTint="#fddcbb" />
+                    />
 
 
             </androidx.cardview.widget.CardView>
@@ -164,18 +165,15 @@
             <androidx.cardview.widget.CardView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:cardCornerRadius="20dp"
+                app:cardCornerRadius="36dp"
+                android:layout_marginVertical="5dp"
                 >
 
                 <ImageView
                     android:id="@+id/mortgage"
-                    app:backgroundTint="#fddcbb"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@mipmap/ic_mortgage"
-                    android:backgroundTintMode="screen"
-                    />
-
+                    android:src="@mipmap/ic_mortgage" />
 
 
             </androidx.cardview.widget.CardView>
@@ -189,16 +187,15 @@
             <androidx.cardview.widget.CardView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:cardCornerRadius="20dp"
+                app:cardCornerRadius="36dp"
                 >
 
                 <ImageView
                     android:id="@+id/depositPhone"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:backgroundTintMode="screen"
                     android:src="@mipmap/ic_deposit_phone"
-                    app:backgroundTint="#fddcbb" />
+                    />
 
 
             </androidx.cardview.widget.CardView>
@@ -212,16 +209,14 @@
             <androidx.cardview.widget.CardView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:cardCornerRadius="20dp"
+                app:cardCornerRadius="36dp"
                 >
 
                 <ImageView
                     android:id="@+id/saving"
-                    app:backgroundTint="#fddcbb"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@mipmap/ic_saving"
-                    android:backgroundTintMode="screen"
                     />
             </androidx.cardview.widget.CardView>
         </LinearLayout>
