--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -3,7 +3,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="#FDF0D5">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:background="#FDF0D5"
+    android:id="@+id/login"
+    tools:context=".ui.login.LoginActivity"
+    >
 
     <androidx.cardview.widget.CardView
         android:layout_width="wrap_content"
@@ -64,32 +68,29 @@
                 <TableRow
                     android:layout_marginTop="5dp"
                     >
-                    <androidx.cardview.widget.CardView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        app:cardCornerRadius="50dp"
-                        android:layout_span="2"
-                        android:backgroundTint="#efeeeb"
-                        android:layout_marginVertical="10dp"
-                        >
 
                         <com.google.android.material.textfield.TextInputLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            app:boxBackgroundMode="none"
+                            app:boxBackgroundColor="#efeeeb"
+                            android:hint="Nhập tên đăng nhập"
+                            android:layout_span="2"
+                            app:boxCornerRadiusTopStart="20dp"
+                            app:boxCornerRadiusBottomStart="20dp"
+                            app:boxCornerRadiusTopEnd="20dp"
+                            app:boxCornerRadiusBottomEnd="20dp"
                             >
-<!--                            android:hint="Nhập tên đăng nhập"-->
 
                             <com.google.android.material.textfield.TextInputEditText
+                                android:id="@+id/username"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:inputType="text"
-                                android:textColor="@color/black"
-                                android:paddingTop="0dp"
+                                android:textSize="18dp"
+                                android:text="admin"
                                 />
                         </com.google.android.material.textfield.TextInputLayout>
 
-                    </androidx.cardview.widget.CardView>
                 </TableRow>
 
                 <TableRow
@@ -106,38 +107,38 @@
                 </TableRow>
 
                 <TableRow
-                    android:layout_marginTop="5dp">
-                    <androidx.cardview.widget.CardView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        app:cardCornerRadius="50dp"
-                        android:layout_span="2"
-                        android:backgroundTint="#efeeeb"
-                        android:layout_marginVertical="10dp"
-                        >
+                    android:layout_marginTop="5dp"
+                    >
+
 
                         <com.google.android.material.textfield.TextInputLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            app:boxBackgroundMode="none"
+                            app:boxBackgroundColor="#efeeeb"
+                            android:hint="Nhập mật khẩu"
+                            android:layout_span="2"
+                            app:boxCornerRadiusTopStart="20dp"
+                            app:boxCornerRadiusBottomStart="20dp"
+                            app:boxCornerRadiusTopEnd="20dp"
+                            app:boxCornerRadiusBottomEnd="20dp"
                             >
-<!--                            android:hint="Nhập mật khẩu"-->
 
                             <com.google.android.material.textfield.TextInputEditText
+                                android:id="@+id/password"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:inputType="textPassword"
-                                android:textColor="@color/black"
-                                android:paddingTop="0dp"
+                                android:textSize="18dp"
+                                android:text="admin"
                                 />
                         </com.google.android.material.textfield.TextInputLayout>
 
-                    </androidx.cardview.widget.CardView>
                 </TableRow>
 
                 <TableRow
                     android:layout_marginTop="15dp">
                     <Button
+                        android:id="@+id/btnLogin"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_span="2"
@@ -160,6 +161,7 @@
                         />
 
                     <Button
+                        android:id="@+id/btnRegister"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Đăng ký"
