--- a/app/src/main/res/layout/transfer_success_screen.xml
+++ b/app/src/main/res/layout/transfer_success_screen.xml
@@ -7,7 +7,14 @@
     android:background="@color/aspire_cream_background"
     tools:context=".TransferSuccessActivity">
 
-    <include layout="@layout/app_bar" />
+    <com.example.app.ui.customeview.AppBarView
+        android:id="@+id/app_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        />
+
 
     <androidx.cardview.widget.CardView
         android:layout_width="0dp"
@@ -20,7 +27,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        >
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
