--- a/app/src/main/res/layout/book_room_list.xml
+++ b/app/src/main/res/layout/book_room_list.xml
@@ -6,15 +6,19 @@
     android:background="#fff1d6"
     >
 
-    <include
-        layout="@layout/app_bar"
+    <com.example.app.ui.customeview.AppBarView
+        android:id="@+id/app_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         />
 
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@+id/appBar"
+        app:layout_constraintTop_toBottomOf="@+id/app_bar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/nav_bar"
@@ -23,8 +27,9 @@
         >
 
 
-        <include
-            layout="@layout/utility_bar"
+        <com.example.app.ui.customeview.UtilityBarView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             />
 
 
@@ -121,7 +126,12 @@
         </androidx.cardview.widget.CardView>
     </LinearLayout>
 
-    <include
-        layout="@layout/nav_bar"
+    <com.example.app.ui.customeview.NavBarView
+        android:id="@+id/nav_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         />
 </androidx.constraintlayout.widget.ConstraintLayout>
