--- a/app/src/main/res/layout/deposit_phone_activity.xml
+++ b/app/src/main/res/layout/deposit_phone_activity.xml
@@ -2,16 +2,22 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/deposit_phone"
+    >
 
-    <include
-        layout="@layout/app_bar"
+    <com.example.app.ui.customeview.AppBarView
+        android:id="@+id/app_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         />
     
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@+id/appBar"
+        app:layout_constraintTop_toBottomOf="@+id/app_bar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/nav_bar"
@@ -19,8 +25,9 @@
         android:orientation="vertical"
         >
 
-        <include
-            layout="@layout/utility_bar"
+        <com.example.app.ui.customeview.UtilityBarView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             />
 
         <androidx.cardview.widget.CardView
@@ -246,7 +253,12 @@
     </LinearLayout>
 
 
-    <include
-        layout="@layout/nav_bar"
+    <com.example.app.ui.customeview.NavBarView
+        android:id="@+id/nav_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         />
 </androidx.constraintlayout.widget.ConstraintLayout>
