--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -8,9 +8,13 @@
     android:background="@color/aspire_cream_background"
     tools:context=".ProfileActivity">
 
-    <include
-        android:id="@+id/appBar"
-        layout="@layout/app_bar" />
+    <com.example.app.ui.customeview.AppBarView
+        android:id="@+id/app_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        />
 
     <ScrollView
         android:layout_width="0dp"
@@ -18,7 +22,7 @@
         android:padding="16dp"
         android:clipToPadding="false"
         android:paddingBottom="100dp"
-        app:layout_constraintTop_toBottomOf="@id/appBar"
+        app:layout_constraintTop_toBottomOf="@id/app_bar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"> <LinearLayout
@@ -253,8 +257,13 @@
     </LinearLayout>
     </ScrollView>
 
-    <include
+    <com.example.app.ui.customeview.NavBarView
         android:id="@+id/nav_bar"
-        layout="@layout/nav_bar" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
