--- a/app/src/main/res/layout/receipt_payment_check.xml
+++ b/app/src/main/res/layout/receipt_payment_check.xml
@@ -6,9 +6,13 @@
     android:background="#fff1d6"
     >
 
-    <include
-        layout="@layout/app_bar"/>
-
+    <com.example.app.ui.customeview.AppBarView
+        android:id="@+id/app_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -16,10 +20,14 @@
         android:layout_marginVertical="20dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/appBar"
+        app:layout_constraintTop_toBottomOf="@+id/app_bar"
         android:orientation="vertical">
 
-        <include layout="@layout/utility_bar" />
+        <com.example.app.ui.customeview.UtilityBarView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            />
+
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
@@ -170,6 +178,12 @@
         </androidx.cardview.widget.CardView>
     </LinearLayout>
 
-    <include
-        layout="@layout/nav_bar"/>
+    <com.example.app.ui.customeview.NavBarView
+        android:id="@+id/nav_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
