--- a/app/src/main/res/layout/transfer_otp_screen.xml
+++ b/app/src/main/res/layout/transfer_otp_screen.xml
@@ -7,7 +7,13 @@
     android:background="@color/aspire_cream_background"
     tools:context=".OtpActivity">
 
-    <include layout="@layout/app_bar" />
+    <com.example.app.ui.customeview.AppBarView
+        android:id="@+id/app_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        />
 
     <androidx.cardview.widget.CardView
         android:layout_width="0dp"
