add be receipt-payment

--- a/app/src/main/res/layout/receipt_payment_activity.xml
+++ b/app/src/main/res/layout/receipt_payment_activity.xml
@@ -36,7 +36,7 @@
             android:layout_height="wrap_content"
             app:cardCornerRadius="20dp"
             android:background="@color/white"
-            android:layout_marginTop="20dp"
+            android:layout_marginVertical="20dp"
             >
 
             <LinearLayout
@@ -55,6 +55,7 @@
                     />
 
                 <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/lstReceipt"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
@@ -62,6 +63,16 @@
                     />
             </LinearLayout>
         </androidx.cardview.widget.CardView>
+
+        <TextView
+            android:id="@+id/textReceipt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Không có hóa đơn cần thành toán"
+            android:textSize="20dp"
+            android:layout_gravity="center"
+            android:layout_marginVertical="20dp"
+            />
     </LinearLayout>
 
     <com.example.app.ui.customeview.NavBarView
