--- a/app/src/main/res/layout/deposit_phone_activity.xml
+++ b/app/src/main/res/layout/deposit_phone_activity.xml
@@ -76,9 +76,12 @@
                     >
 
                     <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/phoneNumber"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:textSize="20dp"
+                        android:inputType="number"
+                        android:maxLength="10"
                         />
                 </com.google.android.material.textfield.TextInputLayout>
 
@@ -91,143 +94,107 @@
                     android:textColor="#02314B"
                     />
 
-                <LinearLayout
+
+                <com.google.android.flexbox.FlexboxLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginVertical="5dp"
-                    android:gravity="center"
+                    app:flexDirection="row"
+                    app:flexWrap="wrap"
+                    app:justifyContent="center"
                     >
 
-                    <androidx.cardview.widget.CardView
+                    <com.google.android.material.button.MaterialButton
+                        android:id="@+id/btn10"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        app:cardBackgroundColor="#fff1d6"
-                        app:cardCornerRadius="20dp"
-                        android:layout_marginVertical="5dp"
-                        >
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="10.000 đ"
-                            android:textSize="20dp"
-                            android:layout_margin="7dp"
-                            />
-                    </androidx.cardview.widget.CardView>
-
-                    <View
-                        android:layout_width="0dp"
-                        android:layout_height="1dp"
-                        android:layout_weight="1"
+                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+                        android:text="10.000 đ"
+                        android:textAllCaps="false"
+                        android:backgroundTint="#fff1d6"
+                        app:cornerRadius="20dp"
+                        android:textColor="@color/black"
+                        android:textSize="15dp"
                         />
 
-                    <androidx.cardview.widget.CardView
+
+                    <com.google.android.material.button.MaterialButton
+                        android:id="@+id/btn20"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        app:cardBackgroundColor="#fff1d6"
-                        app:cardCornerRadius="20dp"
-                        >
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="20.000 đ"
-                            android:textSize="20dp"
-                            android:layout_margin="7dp"
-                            />
-                    </androidx.cardview.widget.CardView>
-
-                    <View
-                        android:layout_width="0dp"
-                        android:layout_height="1dp"
-                        android:layout_weight="1"
+                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+                        android:text="20.000 đ"
+                        android:textAllCaps="false"
+                        android:backgroundTint="#fff1d6"
+                        app:cornerRadius="20dp"
+                        android:textColor="@color/black"
+                        android:textSize="15dp"
+                        android:layout_marginHorizontal="19dp"
                         />
 
-                    <androidx.cardview.widget.CardView
+
+                    <com.google.android.material.button.MaterialButton
+                        android:id="@+id/btn50"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        app:cardBackgroundColor="#fff1d6"
-                        app:cardCornerRadius="20dp"
-                        >
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="50.000 đ"
-                            android:textSize="20dp"
-                            android:layout_margin="7dp"
-                            />
-                    </androidx.cardview.widget.CardView>
-                </LinearLayout>
-
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    >
-
-                    <androidx.cardview.widget.CardView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        app:cardBackgroundColor="#fff1d6"
-                        app:cardCornerRadius="20dp"
-                        android:layout_marginVertical="5dp"
-                        >
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="100.000 đ"
-                            android:textSize="20dp"
-                            android:layout_margin="7dp"
-                            />
-                    </androidx.cardview.widget.CardView>
-
-                    <View
-                        android:layout_width="0dp"
-                        android:layout_height="1dp"
-                        android:layout_weight="1"
+                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+                        android:text="50.000 đ"
+                        android:textAllCaps="false"
+                        android:backgroundTint="#fff1d6"
+                        app:cornerRadius="20dp"
+                        android:textColor="@color/black"
+                        android:textSize="15dp"
                         />
 
-                    <androidx.cardview.widget.CardView
+
+                    <com.google.android.material.button.MaterialButton
+                        android:id="@+id/btn100"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        app:cardBackgroundColor="#fff1d6"
-                        app:cardCornerRadius="20dp"
-                        >
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="200.000 đ"
-                            android:textSize="20dp"
-                            android:layout_margin="7dp"
-                            />
-                    </androidx.cardview.widget.CardView>
-
-                    <View
-                        android:layout_width="0dp"
-                        android:layout_height="1dp"
-                        android:layout_weight="1"
+                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+                        android:text="100.000 đ"
+                        android:textAllCaps="false"
+                        android:backgroundTint="#fff1d6"
+                        app:cornerRadius="20dp"
+                        android:textColor="@color/black"
+                        android:textSize="15dp"
                         />
 
-                    <androidx.cardview.widget.CardView
+
+                    <com.google.android.material.button.MaterialButton
+                        android:id="@+id/btn200"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        app:cardBackgroundColor="#fff1d6"
-                        app:cardCornerRadius="20dp"
-                        >
+                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+                        android:text="200.000 đ"
+                        android:textAllCaps="false"
+                        android:backgroundTint="#fff1d6"
+                        app:cornerRadius="20dp"
+                        android:textColor="@color/black"
+                        android:textSize="15dp"
+                        android:layout_marginHorizontal="5dp"
+                        />
 
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="500.000 đ"
-                            android:textSize="20dp"
-                            android:layout_margin="7dp"
-                            />
-                    </androidx.cardview.widget.CardView>
-                </LinearLayout>
+
+                    <com.google.android.material.button.MaterialButton
+                        android:id="@+id/btn500"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+                        android:text="500.000 đ"
+                        android:textAllCaps="false"
+                        android:backgroundTint="#fff1d6"
+                        app:cornerRadius="20dp"
+                        android:textColor="@color/black"
+                        android:textSize="15dp"
+                        />
+                </com.google.android.flexbox.FlexboxLayout>
+
+
+
+
+
+
+
 
                 <androidx.cardview.widget.CardView
                     android:layout_width="wrap_content"
@@ -240,6 +207,7 @@
                     >
 
                     <TextView
+                        android:id="@+id/btnDepositPhone"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:paddingVertical="10dp"
@@ -261,4 +229,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
