--- a/app/src/main/res/layout/receipt_payment_check.xml
+++ b/app/src/main/res/layout/receipt_payment_check.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#fff1d6"
+    android:id="@+id/receipt_payment_check"
     >
 
     <com.example.app.ui.customeview.AppBarView
@@ -76,6 +77,7 @@
                             />
 
                         <TextView
+                            android:id="@+id/type"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:gravity="end"
@@ -92,7 +94,7 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:gravity="start"
-                            android:text="Hóa đơn"
+                            android:text="Đơn vị"
                             android:textSize="15dp"
                             android:layout_weight="1"
                             />
@@ -101,7 +103,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:gravity="end"
-                            android:text="Tiền điện"
+                            android:text="EVN TP.HCM"
                             android:textSize="15dp"
                             />
                     </LinearLayout>
@@ -115,12 +117,13 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:gravity="start"
-                            android:text="Hóa đơn"
+                            android:text="Mã HĐ"
                             android:textSize="15dp"
                             android:layout_weight="1"
                             />
 
                         <TextView
+                            android:id="@+id/receiptID"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:gravity="end"
@@ -139,12 +142,13 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:gravity="start"
-                            android:text="Hóa đơn"
+                            android:text="Số tiền"
                             android:textSize="15dp"
                             android:layout_weight="1"
                             />
 
                         <TextView
+                            android:id="@+id/amount"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:gravity="end"
@@ -154,6 +158,7 @@
                     </LinearLayout>
 
                     <Button
+                        android:id="@+id/payment"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -165,14 +170,14 @@
 
 
                     <Button
+                        android:id="@+id/cancel"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_marginVertical="10dp"
                         android:backgroundTint="#d9d9d9"
                         android:text="Hủy"
-                        android:textColor="@color/black"
-                        />
+                        android:textColor="@color/black" />
                 </LinearLayout>
             </LinearLayout>
         </androidx.cardview.widget.CardView>
