--- a/app/src/main/res/layout/deposit_phone_success.xml
+++ b/app/src/main/res/layout/deposit_phone_success.xml
@@ -2,7 +2,9 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/deposit_phone_success"
+    >
 
     <com.example.app.ui.customeview.AppBarView
         android:id="@+id/app_bar"
@@ -67,6 +69,7 @@
                         />
 
                     <TextView
+                        android:id="@+id/phoneNumber"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1.5"
@@ -94,6 +97,7 @@
                         />
 
                     <TextView
+                        android:id="@+id/amount"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1.5"
@@ -121,6 +125,7 @@
                         >
 
                         <TextView
+                            android:id="@+id/continueDepositPhone"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Tiếp tục nạp tiền"
@@ -143,6 +148,7 @@
                         >
 
                         <TextView
+                            android:id="@+id/homeCustomer"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Trang chủ"
